# LLM-based-Autonomous-Driving

devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: actor_collision.pc  gem_description.pc  gem_gazebo.pc  gem_launch.pc  mp1.pc  mp2.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
devel/share/actor_collision/cmake/: actor_collisionConfig.cmake
devel/share/gem_description/cmake/: gem_descriptionConfig.cmake
devel/share/gem_gazebo/cmake/: gem_gazeboConfig.cmake
devel/share/gem_launch/cmake/: gem_launchConfig.cmake
devel/share/mp1/cmake/: mp1Config.cmake
devel/share/mp2/cmake/: mp2Config.cmake
devel/share/velodyne_description/cmake/: velodyne_descriptionConfig.cmake
devel/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig.cmake
src/LLM integ/: CMakeLists.txt  package.xml
src/LLM integ/launch/: mp2.launch
src/LLM integ/src/: controller.py  hri.py  main.py  set_pos.py  waypoint_list.py
src/gem_simulator/gem_launch/: CMakeLists.txt  package.xml
src/gem_simulator/gem_launch/config_rviz/: gem_velodyne.rviz
src/gem_simulator/gem_launch/launch/: gem_init.launch  gem_sensor_info.launch
